integration with local rabbitmq

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,16 @@
     "prebuild": "rimraf dist",
     "build:sm": "nest build",
     "build:dc": "nest build data-collector",
+    "build:rd": "nest build request-distributor",
     "build:src": "nest build search-result-calculator",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start:sm": "nest start",
     "start:dc": "nest start data-collector",
+    "start:rd": "nest start request-distributor",
     "start:dev:sm": "nest start --watch",
     "start:dev:dc": "nest start data-collector --watch",
+    "start:dev:rd": "nest start request-distributor --watch",
+    "start:dev:src": "nest start search-result-calculator --watch",
     "start:debug:sm": "nest start --debug --watch",
     "start:debug:dc": "nest start data-collector --debug --watch",
     "start:prod": "node dist/main",
@@ -28,7 +32,10 @@
   "dependencies": {
     "@nestjs/common": "7.0.3",
     "@nestjs/core": "7.0.3",
+    "@nestjs/microservices": "^7.0.6",
     "@nestjs/platform-express": "7.0.3",
+    "amqp-connection-manager": "^3.2.0",
+    "amqplib": "^0.5.5",
     "puppeteer": "2.1.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
