--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
+    "resolveJsonModule": true,
     "paths": {
       "@kb/model": [
         "libs/model/src"
