--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,39 @@ services:
       SAVE_RESULTS_AS_JSON_AND_TAKE_SCREENSHOTS_ON_ERROR: "true"
     volumes:
       - ./scraping-results:/usr/src/app/results
+      - ./tools/wait-for-it.sh:/wait-for-it.sh
     ports:
       - 38080:8080
+
+  request-distributor:
+    build:
+      context: ./backend
+      dockerfile: request-distributor.Dockerfile
+    image: request-distributor
+    volumes:
+      - ./tools/wait-for-it.sh:/wait-for-it.sh
+    ports:
+    - 38081:3001
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+
+  search-manager:
+    build:
+      context: ./backend
+      dockerfile: search-manager.Dockerfile
+    image: search-manager
+    volumes:
+      - ./tools/wait-for-it.sh:/wait-for-it.sh
+    ports:
+    - 38082:8080
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    environment:
+      RABBITMQ_DEFAULT_USER: dev
+      RABBITMQ_DEFAULT_PASS: dev
+    volumes:
+    - ./mq/definitions.json:/etc/rabbitmq/definitions.json
+    ports:
+      - 15672:15672
+      - 5672:5672
