introduce configuration for whole backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,66 +1,69 @@
 {
   "name": "kb-backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Find the best place to visit",
+  "author": "piotr.westphal@gmail.com",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build:sm": "nest build",
+    "build:us": "nest build",
     "build:dc": "nest build data-collector",
-    "build:rd": "nest build request-distributor",
+    "build:srm": "nest build search-request-manager",
     "build:src": "nest build search-result-calculator",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start:sm": "nest start",
+    "start:us": "nest start",
     "start:dc": "nest start data-collector",
-    "start:rd": "nest start request-distributor",
-    "start:dev:sm": "nest start --watch",
+    "start:srm": "nest start search-request-manager",
+    "start:src": "nest start ssearch-result-calculator",
+    "start:dev:us": "nest start --watch",
     "start:dev:dc": "nest start data-collector --watch",
-    "start:dev:rd": "nest start request-distributor --watch",
+    "start:dev:srm": "nest start search-request-manager --watch",
     "start:dev:src": "nest start search-result-calculator --watch",
-    "start:debug:sm": "nest start --debug --watch",
-    "start:debug:dc": "nest start data-collector --debug --watch",
+    "start:debug:us": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/search-manager/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/user-service/test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "7.0.3",
-    "@nestjs/core": "7.0.3",
-    "@nestjs/microservices": "^7.0.6",
-    "@nestjs/platform-express": "7.0.3",
-    "amqp-connection-manager": "^3.2.0",
-    "amqplib": "^0.5.5",
+    "@hapi/joi": "17.1.1",
+    "@nestjs/common": "7.0.7",
+    "@nestjs/core": "7.0.7",
+    "@nestjs/microservices": "7.0.7",
+    "@nestjs/platform-express": "7.0.7",
+    "amqp-connection-manager": "3.2.0",
+    "amqplib": "0.5.5",
+    "faunadb": "2.13.1",
     "puppeteer": "2.1.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "6.5.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "7.0.2",
+    "@nestjs/cli": "7.1.1",
     "@nestjs/schematics": "7.0.0",
-    "@nestjs/testing": "7.0.3",
+    "@nestjs/testing": "7.0.7",
     "@types/express": "4.17.3",
+    "@types/hapi__joi": "16.0.12",
     "@types/jest": "25.1.4",
     "@types/puppeteer": "2.0.1",
-    "@types/node": "13.9.2",
+    "@types/node": "13.9.5",
     "@types/supertest": "2.0.8",
-    "@typescript-eslint/eslint-plugin": "2.24.0",
-    "@typescript-eslint/parser": "2.24.0",
+    "@typescript-eslint/eslint-plugin": "2.25.0",
+    "@typescript-eslint/parser": "2.25.0",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-import": "2.20.1",
-    "jest": "25.1.0",
-    "prettier": "1.19.1",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-import": "2.20.2",
+    "jest": "25.2.3",
+    "prettier": "2.0.2",
     "supertest": "4.0.2",
     "ts-jest": "25.2.1",
-    "ts-loader": "6.2.1",
-    "ts-node": "8.7.0",
+    "ts-loader": "6.2.2",
+    "ts-node": "8.8.1",
     "tsconfig-paths": "3.9.0",
     "typescript": "3.8.3"
   },
@@ -83,7 +86,11 @@
     ],
     "moduleNameMapper": {
       "@kb/model/(.*)": "<rootDir>/libs/model/src/$1",
-      "@kb/model": "<rootDir>/libs/model/src"
+      "@kb/model": "<rootDir>/libs/model/src",
+      "@kb/config/(.*)": "<rootDir>/libs/config/src/$1",
+      "@kb/config": "<rootDir>/libs/config/src",
+      "@kb/fauna-client/(.*)": "<rootDir>/libs/fauna-client/src/$1",
+      "@kb/fauna-client": "<rootDir>/libs/fauna-client/src"
     }
   }
 }
