--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -29,6 +29,12 @@
       ],
       "@kb/fauna-client/*": [
         "libs/fauna-client/src/*"
+      ],
+      "@kb/rabbit": [
+        "libs/rabbit/src"
+      ],
+      "@kb/rabbit/*": [
+        "libs/rabbit/src/*"
       ]
     }
   },
