--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   data-collector:
     build:
       context: ./backend
-      dockerfile: docker/data-collector.Dockerfile
+      dockerfile: backend/kb-data-collector.Dockerfile
     image: kb-data-collector
     environment:
       NODE_ENV: dev
@@ -19,7 +19,7 @@ services:
   search-request-manager:
     build:
       context: ./backend
-      dockerfile: docker/search-request-manager.Dockerfile
+      dockerfile: backend/kb-search-request-manager.Dockerfile
     image: kb-search-request-manager
     volumes:
       - ./tools/wait-for-it.sh:/wait-for-it.sh
@@ -30,7 +30,7 @@ services:
   user-service:
     build:
       context: ./backend
-      dockerfile: docker/user-service.Dockerfile
+      dockerfile: backend/kb-user-service.Dockerfile
     image: kb-user-service
     volumes:
       - ./tools/wait-for-it.sh:/wait-for-it.sh
@@ -44,7 +44,7 @@ services:
       RABBITMQ_DEFAULT_USER: dev
       RABBITMQ_DEFAULT_PASS: dev
     volumes:
-    - ./backend/config/rmq-definitions.json:/etc/rabbitmq/definitions.json
+    - ./backend/mq/rmq-definitions.json:/etc/rabbitmq/definitions.json
     ports:
       - 15672:15672
       - 5672:5672
