rename project search-request-manager -> search-queue-manager

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,16 @@
     "prebuild": "rimraf dist",
     "build:us": "nest build",
     "build:dc": "nest build data-collector",
-    "build:srm": "nest build search-request-manager",
+    "build:sqm": "nest build search-queue-manager",
     "build:src": "nest build search-result-calculator",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start:us": "nest start",
     "start:dc": "nest start data-collector",
-    "start:srm": "nest start search-request-manager",
+    "start:sqm": "nest start search-queue-manager",
     "start:src": "nest start ssearch-result-calculator",
     "start:dev:us": "nest start --watch",
     "start:dev:dc": "nest start data-collector --watch",
-    "start:dev:srm": "nest start search-request-manager --watch",
+    "start:dev:sqm": "nest start search-queue-manager --watch",
     "start:dev:src": "nest start search-result-calculator --watch",
     "start:debug:us": "nest start --debug --watch",
     "start:prod": "node dist/main",
