--- a/backend/package.json
+++ b/backend/package.json
@@ -34,10 +34,12 @@
     "@nestjs/common": "7.0.7",
     "@nestjs/core": "7.0.7",
     "@nestjs/microservices": "7.0.7",
+    "@nestjs/mongoose": "6.4.0",
     "@nestjs/platform-express": "7.0.7",
     "amqp-connection-manager": "3.2.0",
     "amqplib": "0.5.5",
     "faunadb": "2.13.1",
+    "mongoose": "5.9.7",
     "puppeteer": "2.1.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
@@ -50,6 +52,7 @@
     "@types/express": "4.17.3",
     "@types/hapi__joi": "16.0.12",
     "@types/jest": "25.1.4",
+    "@types/mongoose": "5.7.8",
     "@types/puppeteer": "2.0.1",
     "@types/node": "13.9.5",
     "@types/supertest": "2.0.8",
@@ -92,7 +95,9 @@
       "@kb/fauna-client/(.*)": "<rootDir>/libs/fauna-client/src/$1",
       "@kb/fauna-client": "<rootDir>/libs/fauna-client/src",
       "@kb/rabbit/(.*)": "<rootDir>/libs/rabbit/src/$1",
-      "@kb/rabbit": "<rootDir>/libs/rabbit/src"
+      "@kb/rabbit": "<rootDir>/libs/rabbit/src",
+      "@kb/mongo/(.*)": "<rootDir>/libs/mongo/src/$1",
+      "@kb/mongo": "<rootDir>/libs/mongo/src"
     }
   }
 }
