--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@nestjs/microservices": "7.0.7",
     "@nestjs/mongoose": "6.4.0",
     "@nestjs/platform-express": "7.0.7",
+    "@nestjs/schedule": "0.3.1",
     "amqp-connection-manager": "3.2.0",
     "amqplib": "0.5.5",
     "faunadb": "2.13.1",
