change the search req document model | improve mongo db queries | add obsolete reqs searcher (inactive for now)

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,10 @@
     "start:dc": "nest start data-collector",
     "start:sqm": "nest start search-queue-manager",
     "start:src": "nest start ssearch-result-calculator",
-    "start:dev:us": "nest start --watch",
-    "start:dev:dc": "nest start data-collector --watch",
-    "start:dev:sqm": "nest start search-queue-manager --watch",
-    "start:dev:src": "nest start search-result-calculator --watch",
+    "start:watch:us": "nest start --watch",
+    "start:watch:dc": "nest start data-collector --watch",
+    "start:watch:sqm": "nest start search-queue-manager --watch",
+    "start:watch:src": "nest start search-result-calculator --watch",
     "start:debug:us": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
