search-result-calculator initial config | update/cleanup existing config

--- a/dev.env
+++ b/dev.env
@@ -3,6 +3,11 @@ PORT=8080
 CORS_ORIGINS=localhost
 MONGO_ADDRESS=mongodb://mongo:27017/dev
 FAUNADB_ADDRESS=http://faunadb:8443
+FAUNA_DB_NAME=kingboo
+FAUNA_ADMIN_DB_DOMAIN=faunadb
+FAUNA_ADMIN_DB_SCHEME=http
+FAUNA_ADMIN_DB_PORT=8443
+FAUNA_ADMIN_DB_SECRET=secret
 MQ_ADDRESS=amqp://dev:dev@rabbitmq:5672
 MQ_COLLECTING_SCENARIO_QUEUE_NAME=collecting-scenario
 MQ_DATA_COLLECTION_NOTIFICATIONS_QUEUE_NAME=data-collection-notifications
