--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,6 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
 
 # OS
 .DS_Store
@@ -21,3 +18,8 @@ lerna-debug.log*
 
 /scraping-results
 !/scraping-results/.gitkeep
+
+/calculating-results
+!/calculating-results/.gitkeep
+
+prod.env
