--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./scraping-results:/usr/src/app/dist/apps/data-collector/results
+      - ./scraping-output:/usr/src/app/dist/apps/data-collector/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     ports:
       - 38082:8080
@@ -47,7 +47,7 @@ services:
 #    env_file:
 #      - ./dev.env
 #    volumes:
-#      - ./calculating-results:/usr/src/app/dist/apps/search-result-calculator/results
+#      - ./calculating-output:/usr/src/app/dist/apps/search-result-calculator/output
 #      - ./tools/wait-for-it.sh:/wait-for-it.sh
 #    ports:
 #    - 38083:8080
