add logLevel as common env value

--- a/backend/package.json
+++ b/backend/package.json
@@ -44,7 +44,8 @@
     "puppeteer": "2.1.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "6.5.4"
+    "rxjs": "6.5.4",
+    "winston": "3.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "7.1.1",
