--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "amqp-connection-manager": "3.2.0",
     "amqplib": "0.5.5",
     "faunadb": "2.13.1",
+    "humio-winston": "1.0.6",
     "mongoose": "5.9.7",
     "puppeteer": "2.1.1",
     "reflect-metadata": "0.1.13",
