--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
 #      dockerfile: backend/kb-user-service.Dockerfile
 #    image: kb-user-service
 #    volumes:
+#      - ./compose-output:/usr/src/app/dist/apps/user-service/output
 #      - ./tools/wait-for-it.sh:/wait-for-it.sh
 #    ports:
 #      - 38082:8080
@@ -17,8 +18,9 @@ services:
       dockerfile: kb-search-queue-manager.Dockerfile
     image: kb-search-queue-manager
     env_file:
-      - ./dev.env
+      - dev.env
     volumes:
+      - ./compose-output:/usr/src/app/dist/apps/search-queue-manager/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     ports:
       - 38081:8080
@@ -32,7 +34,7 @@ services:
     env_file:
       - dev.env
     volumes:
-      - ./scraping-output:/usr/src/app/dist/apps/data-collector/output
+      - ./compose-output:/usr/src/app/dist/apps/data-collector/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
     ports:
       - 38082:8080
@@ -45,9 +47,9 @@ services:
 #      dockerfile: kb-search-result-calculator.Dockerfile
 #    image: kb-search-result-calculator
 #    env_file:
-#      - ./dev.env
+#      - dev.env
 #    volumes:
-#      - ./calculating-output:/usr/src/app/dist/apps/search-result-calculator/output
+#      - ./compose-output:/usr/src/app/dist/apps/search-result-calculator/output
 #      - ./tools/wait-for-it.sh:/wait-for-it.sh
 #    ports:
 #    - 38083:8080
