fix env name | improve logging

--- a/dev.env
+++ b/dev.env
@@ -1,5 +1,6 @@
 NODE_ENV=dev
 PORT=8080
+LOG_LEVEL=debug
 CORS_ORIGINS=localhost
 MONGO_ADDRESS=mongodb://mongo:27017/dev
 FAUNADB_ADDRESS=http://faunadb:8443
