--- a/dev.env
+++ b/dev.env
@@ -9,6 +9,9 @@ FAUNA_ADMIN_DB_DOMAIN=faunadb
 FAUNA_ADMIN_DB_SCHEME=http
 FAUNA_ADMIN_DB_PORT=8443
 FAUNA_ADMIN_DB_SECRET=secret
+FIRESTORE_PROJECT_ID=dev
+FIRESTORE_EMULATOR_HOST=localhost
+FIRESTORE_EMULATOR_PORT=8555
 MQ_ADDRESS=amqp://dev:dev@rabbitmq:5672
 MQ_COLLECTING_SCENARIO_QUEUE_NAME=collecting-scenario
 MQ_DATA_COLLECTION_NOTIFICATIONS_QUEUE_NAME=data-collection-notifications
