replace faunadb with firestore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - 38081:8080
     command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
 
-  data-collector-a:
+  data-collector:
     build:
       context: ./backend
       dockerfile: kb-data-collector.Dockerfile
@@ -36,7 +36,7 @@ services:
     volumes:
       - ./compose-output:/usr/src/app/dist/apps/data-collector/output
       - ./tools/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "faunadb:8443", "-t", "60", "--", "node", "main"]
+    command: ["/wait-for-it.sh", "rabbitmq:5672", "-t", "60", "--", "node", "main"]
 
   search-result-calculator:
     build:
@@ -65,39 +65,6 @@ services:
     image: mongo
     ports:
       - 27017:27017
-
-  faunadb:
-    image: fauna/faunadb
-    ports:
-      - 8443:8443
-      - 8444:8444
-
-  faunadb-initializer:
-    build:
-      context: ./db/fauna
-      dockerfile: faunadb-initializer.Dockerfile
-    depends_on:
-      - faunadb
-    env_file:
-      - dev.env
-    environment:
-      FAUNADB_INITIALIZED_CHECK_ADDRESS: http://faunadb:8443/ping
-      FAUNA_ADMIN_DB_SECRET: secret
-      FAUNA_DB_NAME: kingboo
-      FAUNA_PATH_TO_INIT_DB_SCRIPT: /bin/create-kingboo-db-with-data.fql
-    command: ["/bin/bash", "-c", "init-db-when-ready.sh"]
-    volumes:
-      - ./db/fauna/create-kingboo-db-with-data.fql:/bin/create-kingboo-db-with-data.fql
-      - ./db/fauna/init-db-when-ready.sh:/bin/init-db-when-ready.sh
-
-  faunadb-dashboard:
-    build:
-      context: ./db/fauna
-      dockerfile: faunadb-dashboard.Dockerfile
-    depends_on:
-      - faunadb
-    ports:
-      - 33000:3000
 
   firestore:
     build:
