--- a/.github/workflows/deploy-to-westus00.yml
+++ b/.github/workflows/deploy-to-westus00.yml
@@ -51,7 +51,7 @@ jobs:
 
       - uses: webfactory/ssh-agent@v0.2.0
         with:
-          ssh-private-key: ${{ secrets.WESTUS00_KEY }} # TODO
+          ssh-private-key: ${{ secrets.WESTUS00_KEY }}
 
       - name: Deploy services to westus00
         env:
