fix paths and issue with not existing folders

--- a/.github/workflows/deploy-to-westus00.yml
+++ b/.github/workflows/deploy-to-westus00.yml
@@ -62,9 +62,10 @@ jobs:
         run: |
           ssh -T -o StrictHostKeyChecking=no -l ${{ secrets.WESTUS00_USER }} ${{ secrets.WESTUS00_HOST }} << EOF
             uptime
-            cd ~/app/cloud/opc/westus00
+            cd ~/app
             git fetch
             git reset --hard origin/master
+            cd cloud/opc/westus00
             echo "CORS_ORIGINS=$CORS_ORIGINS >> westus00.env
             echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN >> westus00.env
             echo "MONGO_ADDRESS=$MONGO_ADDRESS" >> westus00.env
