--- a/.github/workflows/deploy-to-westus01.yml
+++ b/.github/workflows/deploy-to-westus01.yml
@@ -56,5 +56,5 @@ jobs:
             echo "FIRESTORE_CLIENT_KEY=$FIRESTORE_CLIENT_KEY" >> westus01.env
             echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus01.env
             docker-compose pull
-            docker-compose -d
+            docker-compose up -d
           EOF
