--- a/cloud/opc/westus00/westus00.env
+++ b/cloud/opc/westus00/westus00.env
@@ -1,4 +1,4 @@
 # CORS_ORIGINS will appear
-# LOG_COLLECTOR_TOKEN will appear
-# MONGO_ADDRESS will appear
-# MQ_ADDRESS will appear
+# LOG_COLLECTOR_TOKEN
+# MONGO_ADDRESS
+# MQ_ADDRESS
