more precise comment

--- a/cloud/opc/westus00/westus00.env
+++ b/cloud/opc/westus00/westus00.env
@@ -1,4 +1,5 @@
-# CORS_ORIGINS will appear
+# all following variables will appear
+# CORS_ORIGINS
 # LOG_COLLECTOR_TOKEN
 # MONGO_ADDRESS
 # MQ_ADDRESS
