--- a/cloud/opc/westus01/westus01.env
+++ b/cloud/opc/westus01/westus01.env
@@ -1,4 +1,5 @@
-# LOG_COLLECTOR_TOKEN will appear
+# all following variables will appear
+# LOG_COLLECTOR_TOKEN
 # CORS_ORIGINS
 # FIRESTORE_PROJECT_ID
 # FIRESTORE_CLIENT_EMAIL
