--- a/prod.env.example
+++ b/prod.env.example
@@ -3,6 +3,7 @@ PORT=8080
 LOG_LEVEL=debug
 LOG_COLLECTOR_TOKEN=
 CORS_ORIGINS=localhost
+HOTELS_STORAGE_DAYS=28
 SAVE_SEARCH_RESULT_AS_JSON=true
 SAVE_RAW_SEARCH_RESULT_AS_JSON=true
 MONGO_ADDRESS=
