--- a/cloud/opc/opc.env
+++ b/cloud/opc/opc.env
@@ -1,6 +1,6 @@
 NODE_ENV=prod
 LOG_LEVEL=debug
-HOTELS_STORAGE_DAYS=28
+HOTELS_WITHOUT_UPDATE_STORAGE_DAYS=7
 SAVE_SEARCH_RESULT_AS_JSON=true
 RAW_SEARCH_RESULT_STORAGE_DAYS=2
 SAVE_RAW_SEARCH_RESULT_AS_JSON=true
