remove old docker images after a docker container recreation

--- a/.github/workflows/deploy-to-westus00.yml
+++ b/.github/workflows/deploy-to-westus00.yml
@@ -72,4 +72,5 @@ jobs:
             echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus00.env
             docker-compose pull
             docker-compose up -d
+            docker image prune -f
           EOF
