--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
+    "rxjs": "6.6.2",
     "typescript": "3.9.7"
   },
   "scripts": {
