--- a/dev.env
+++ b/dev.env
@@ -1,7 +1,7 @@
 NODE_ENV=dev
 PORT=8080
 LOG_LEVEL=debug
-CORS_ORIGINS=localhost
+CORS_ORIGINS=http://localhost:30000
 MONGO_ADDRESS=mongodb://mongo:27017/dev
 FIRESTORE_PROJECT_ID=dev
 FIRESTORE_EMULATOR_HOST=firestore
