--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,14 +8,14 @@
     "@testing-library/jest-dom": "5.11.1",
     "@testing-library/react": "10.4.7",
     "@testing-library/user-event": "12.0.15",
-    "@types/classnames": "2.2.10",
     "@types/jest": "26.0.7",
     "@types/node": "14.0.26",
     "@types/react": "16.9.43",
     "@types/react-dom": "16.9.8",
-    "classnames": "2.2.6",
+    "@types/react-router-dom": "5.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "rxjs": "6.6.2",
     "typescript": "3.9.7"
