--- a/cloud/gcp/app.yaml
+++ b/cloud/gcp/app.yaml
@@ -7,18 +7,18 @@ handlers:
     secure: always
     redirect_http_response_code: 301
     static_files: public/favicon.ico
-    upload: build/favicon\.ico
+    upload: public/favicon\.ico
 
   - url: /
     secure: always
     redirect_http_response_code: 301
-    static_files: build/index.html
-    upload: build/index.html
+    static_files: public/index.html
+    upload: public/index.html
 
-  - url: /build
+  - url: /public
     secure: always
     redirect_http_response_code: 301
-    static_dir: build
+    static_dir: public
 
   - url: /socket\.io/.*
     secure: always
