--- a/cloud/gcp/app.yaml
+++ b/cloud/gcp/app.yaml
@@ -3,24 +3,36 @@
 runtime: nodejs12
 default_expiration: "10m"
 handlers:
-  # Serve all static files with url ending with a file extension
-  - url: /(.*\..+)$
+  - url: /static/js/(.*)
+    secure: always
+    static_files: public/static/js/\1
+    upload: public/static/js/(.*)
+
+  - url: /static/css/(.*)
+    secure: always
+    static_files: public/static/css/\1
+    upload: public/static/css/(.*)
+
+  - url: /static/media/(.*)
+    secure: always
+    static_files: public/static/media/\1
+    upload: public/static/media/(.*)
+
+  - url: /(.*\.(json|ico))$
     secure: always
     static_files: public/\1
-    redirect_http_response_code: 301
-    upload: public/(.*\..+)$
-  # Catch all handler to index.html
+    upload: public/.*\.(json|ico)$
+
+  - url: /
+    secure: always
+    static_files: public/index.html
+    upload: public/index.html
+
   - url: /.*
     secure: always
     static_files: public/index.html
-    redirect_http_response_code: 301
     upload: public/index.html
 
-#  - url: /public
-#    secure: always
-#    redirect_http_response_code: 301
-#    static_dir: public
-#
 #  - url: /socket\.io/.*
 #    secure: always
 #    script: auto
