--- a/cloud/gcp/app.yaml
+++ b/cloud/gcp/app.yaml
@@ -30,8 +30,8 @@ handlers:
 
   - url: /.*
     secure: always
-    static_files: public/index.html
-    upload: public/index.html
+    redirect_http_response_code: 301
+    script: auto
 
 #  - url: /socket\.io/.*
 #    secure: always
