--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -42,7 +42,7 @@ jobs:
           echo "NODE_ENV $NODE_ENV"
           echo "CI $CI"
           npm run build
-          mv build/* ../cloud/gcp/public
+          mv build/* ../cloud/gcp/webapp/public
 
       - name: GCP authenticate as service account
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
@@ -52,7 +52,7 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
 
       - name: Deploy to app engine
-        working-directory: ./cloud/gcp
+        working-directory: ./cloud/gcp/webapp
         run: |
           gcloud config set project ${{ secrets.GCLOUD_PROJECT }}
           gcloud -q app deploy -v $GITHUB_SHA
